# ssh-manager

./: .gitignore  CMakeLists.txt  Cargo.toml  sshmgr.cpp  sshmgr.h
libs/hostspsr/: hostspsr.cpp
libs/hostspsr/include/: hostspsr.h
src/: main.rs
src/libs/: config.rs  mod.rs  ssh.rs  tui.rs
